exports[`Toggle should render a Toggle 1`] = `
<div
  className={undefined}>
  <input
    checked={false}
    className={undefined}
    disabled={false}
    id="id"
    onChange={[Function]}
    type="checkbox" />
  <label
    className={undefined}
    htmlFor="id" />
</div>
`;

exports[`Toggle should render a Toggle with label 1`] = `
<div
  className={undefined}>
  <input
    checked={false}
    className={undefined}
    disabled={false}
    id="id"
    onChange={[Function]}
    type="checkbox" />
  <label
    className={undefined}
    htmlFor="id" />
  <label
    className={undefined}
    htmlFor="id">
    some label
  </label>
</div>
`;

exports[`Toggle should render a checked Toggle 1`] = `
<div
  className={undefined}>
  <input
    checked={true}
    className={undefined}
    disabled={false}
    id="id"
    onChange={[Function]}
    type="checkbox" />
  <label
    className={undefined}
    htmlFor="id" />
</div>
`;

exports[`Toggle should render a disabled Toggle 1`] = `
<div
  className={undefined}>
  <input
    checked={false}
    className={undefined}
    disabled={true}
    id="id"
    onChange={[Function]}
    type="checkbox" />
  <label
    className={undefined}
    htmlFor="id" />
</div>
`;
